[package]
name = "template-io"
version = "0.1.0"
description = "template-io"
authors = ["JP Wogaman II"]
license = "MIT"
repository = "https://github.com/jpwogaman/template.io"
default-run = "template-io"
edition = "2021"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.131"
serde = { version = "1.0.210", features = ["derive"] }
tauri = { version = "2.0.0-rc.15", features = ["tray-icon", "image-png"] }
palette = "0.7.6"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2.0.0-beta.0"
tauri-plugin-http = "2"
prisma-client-rust = { features = [
  "sqlite",
  "migrations",
  "mocking",
  "specta",
], git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { features = [
  "migrations",
  # "mutation-callbacks",
], git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
tokio = { version = "1.26.0", features = ["macros"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
