[package]
name = "template-io"
version = "0.1.0"
description = "template-io"
authors = ["JP Wogaman II"]
license = "MIT"
repository = "https://github.com/jpwogaman/template.io"
default-run = "template-io"
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bindings_custom_types"
path = "./src/bin/bindings_custom_types.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
palette = "0.7.6"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dirs = "6.0.0"
diesel = { version = "2.2.9", features = ["sqlite", "chrono"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
reqwest = { version = "0.12.15", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = "1.16.0"

tauri = { version = "2.5.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-notification = "2.2.2"
tauri-plugin-os = "2.2.1"
tauri-plugin-log = "2.4.0"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-process = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-http = "2.4.3"

specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2.0.12"
colored = "3.0.0"
regex = "1.11.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
png = []


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
